# gpu-detect

./: CMakeLists.txt  README.md  dev_kostromdan_mods_crash_assistant_app_utils_gpu_DirectXGPUDetector.h  gpu-detect-jni.cpp  gpu-detect-shared.h  gpu-detect.cpp
